--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ sourceCompatibility = "17"
 repositories {
     mavenCentral()
     mavenLocal()
+    maven { url = "https://repo.towerdefence.cc/snapshots" }
 }
 
 dependencies {
@@ -21,7 +22,7 @@ dependencies {
     implementation("net.devh:grpc-server-spring-boot-starter:2.13.1.RELEASE") {
         exclude group: "io.grpc", module: "grpc-netty-shaded" // causes version conflicts, provided by the proto SDK
     }
-    implementation("cc.towerdefence.api:grpc-sdk:1.0.0")
+    implementation("cc.towerdefence.api:grpc-sdk:22f2328")
     implementation('io.kubernetes:client-java:16.0.1')
 
     developmentOnly("org.springframework.boot:spring-boot-devtools")
